--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,12 @@ body {
     border: 0;
     padding: 0;
     vertical-align: baseline;/* Old browsers */
+
+    /* 1. Find a background image 
+       2. Put it in the "assets" folder
+       3. Change this url string so that it matches the name of the image file
+       4. Wait for the page to refresh! */
+    background-image: url("../assets/footer_lodyas.png");
 }
 
 body {
@@ -32,13 +38,14 @@ app-root {
 .btn {
     margin: 10px;
     border-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.8) 1px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+/*    box-shadow: rgba(0, 0, 0, 0.8) 1px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;*/
+    box-shadow: 0 0.3125rem 1rem 0 rgba(0,0,0,0.24); 
 }
 
-.App {
-  height: auto;
-  width: auto;
+h1, h2, h3, p, ul, li {
+  color: #ecf0f1;
 }
 
-/* Hovering buttons look (Quizlet) */
-/* box-shadow: 0 0.3125rem 1rem 0 rgba(0,0,0,0.24); */
+.home-container {
+
+}
