--- a/src/styles/components/time.css
+++ b/src/styles/components/time.css
@@ -1,6 +1,6 @@
 .time-container {
     text-align: left;
-    margin: 20px;
+    margin: 20px 0 0 20px;
     height: auto;
     width: 45%;
     float: left;
@@ -15,4 +15,5 @@
     font-size: 2em;
     width: max-content;
     margin-right: 0;
+    color: #ecf0f1;
 }
